Rendu /6 Rendu 28112019/Trace/5-6-cycle_detector.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
ox-f4.21-school.ru
Darwin 16.7.0 x86_64
$> date
Thu Nov 28 13:19:32 MSK 2019
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2019/c-exam-alone-in-the-dark-beginner/exam_20191128/apearl

= Git history ==================================================================
$> git -C /var/folders/z4/xw7dyttj0yx25p7s9ghnnpqc0000gq/T/tmprxFKwX/user log --pretty='%H - %an, %ad : %s'
cc3a722b91540917f4df0d05a4a09d5c92cde098 - Exam 42, Thu Nov 28 13:19:21 2019 +0300 : cycle_detector
7e8f14ebbe4472a79ef360961919edf972934a55 - Exam 42, Thu Nov 28 12:45:33 2019 +0300 : sort_int_tab
8b1dbcc75cfb2ecb0aec9c0e56815537419836fc - Exam 42, Thu Nov 28 12:13:46 2019 +0300 : sort_int_tab
 
= Collected files ==========================================
$> ls -lAR /var/folders/z4/xw7dyttj0yx25p7s9ghnnpqc0000gq/T/tmprxFKwX/user
total 24
-rw-r--r--  1 deepthought  deepthought  6148 Nov 28 13:19 .DS_Store
-rw-r--r--  1 deepthought  deepthought   815 Nov 28 13:19 __GIT_HISTORY
drwxr-xr-x  4 deepthought  deepthought   136 Nov 28 13:19 cycle_detector
drwxr-xr-x  4 deepthought  deepthought   136 Nov 28 13:19 sort_int_tab

/var/folders/z4/xw7dyttj0yx25p7s9ghnnpqc0000gq/T/tmprxFKwX/user/cycle_detector:
total 24
-rw-r--r--  1 deepthought  deepthought  6148 Nov 28 13:19 .DS_Store
-rw-r--r--  1 deepthought  deepthought   282 Nov 28 13:19 cycle_detector.c

/var/folders/z4/xw7dyttj0yx25p7s9ghnnpqc0000gq/T/tmprxFKwX/user/sort_int_tab:
total 24
-rw-r--r--  1 deepthought  deepthought  6148 Nov 28 13:19 .DS_Store
-rw-r--r--  1 deepthought  deepthought   331 Nov 28 13:19 sort_int_tab.c
 
= cycle_detector ===============================================================
$> gcc -Wextra -Wall -Werror main.c test_cycle_detector.c cycle_detector.c -o user_exe 
cycle_detector.c:8:12: error: using the result of an assignment as a condition without parentheses [-Werror,-Wparentheses]
    if (l1 = l2->next)
        ~~~^~~~~~~~~~
cycle_detector.c:8:12: note: place parentheses around the assignment to silence this warning
    if (l1 = l2->next)
           ^
        (            )
cycle_detector.c:8:12: note: use '==' to turn this assignment into an equality comparison
    if (l1 = l2->next)
           ^
           ==
cycle_detector.c:13:34: error: expected ';' after expression
        l2->next = l2->next->next
                                 ^
                                 ;
cycle_detector.c:3:41: error: unused parameter 'list' [-Werror,-Wunused-parameter]
int        cycle_detector(const t_list *list)
                                        ^
3 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
